/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.namespace.namespace.proto;

option java_package = "com.dremio.service.namespace.protostuff";
option optimize_for = SPEED;
option java_outer_classname = "NamespaceProtobuf";

import "any.proto";
import "dataset.proto";
import "source.proto";
import "space.proto";

message NameSpaceContainer {
  enum Type {
    SPACE = 1;
    SOURCE = 2;
    HOME = 3;
    FOLDER = 4;
    DATASET = 5;
  }

  repeated string fullPath = 1; // In case we lose map, we can recover entire namespace using fullPath.
  optional Type type = 2; // Using protostuff, so don't make it a required field.
  // Only one of these is set.
  optional com.dremio.service.namespace.source.proto.SourceConfig source = 3;
  optional com.dremio.service.namespace.space.proto.SpaceConfig space = 4;
  optional com.dremio.service.namespace.space.proto.FolderConfig folder = 5;
  optional com.dremio.service.namespace.dataset.proto.DatasetConfig dataset = 6;
  optional com.dremio.service.namespace.space.proto.HomeConfig home = 7;

  repeated common.Any attributes = 8;
}

message NameSpaceContainers {
  repeated NameSpaceContainer containers = 1;
}
